--- a/project2/nbproject/project.properties
+++ b/project2/nbproject/project.properties
@@ -35,7 +35,8 @@ dist.jlink.output=${dist.jlink.dir}/project2
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.newlib.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
