--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /JavaApplication21/nbproject/private/
 /project2/nbproject/private/
 /project2/build/
+/Quiz2/nbproject/private/
+/Quiz2/build/
+/Quiz2-1/build/
+/Quiz2-1/nbproject/private/
