--- a/project2/nbproject/project.properties
+++ b/project2/nbproject/project.properties
@@ -35,9 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/project2
 endorsed.classpath=
 excludes=
+file.reference.gs-algo-2.0.jar=../../../Downloads/gs-algo-2.0.jar
+file.reference.gs-core-2.0.jar=/Users/andy/Downloads/gs-core-2.0.jar
+file.reference.gs-ui-swing-2.0.jar=../../../Downloads/gs-ui-swing-2.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gs-ui-swing-2.0.jar}:\
+    ${file.reference.gs-core-2.0.jar}:\
+    ${file.reference.gs-algo-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
