--- a/project2/nbproject/project.properties
+++ b/project2/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=project2
-application.vendor=andy
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -33,17 +32,16 @@ dist.jar=${dist.dir}/project2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/project2
-endorsed.classpath=
 excludes=
-file.reference.gs-algo-2.0.jar=../../../Downloads/gs-algo-2.0.jar
+file.reference.gs-algo-2.0.jar=/Users/andy/Downloads/gs-algo-2.0.jar
 file.reference.gs-core-2.0.jar=/Users/andy/Downloads/gs-core-2.0.jar
-file.reference.gs-ui-swing-2.0.jar=../../../Downloads/gs-ui-swing-2.0.jar
+file.reference.gs-ui-swing-2.0.jar=/Users/andy/Downloads/gs-ui-swing-2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gs-ui-swing-2.0.jar}:\
-    ${file.reference.gs-core-2.0.jar}:\
     ${file.reference.gs-algo-2.0.jar}:\
+    ${file.reference.gs-core-2.0.jar}:\
+    ${file.reference.gs-ui-swing-2.0.jar}:\
     ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
